--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "js-file-download": "^0.4.12",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
